src/Stylizers/card.css
.Card {
  display: inline-block;
  height: 600px;
  width: 400px;
  margin: 25px;
  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
  transition: all 0.1s ease-in-out;
  background-color: white;
  vertical-align: top;
}

.Card:hover {
  transform: scale(1.05);
}

.responsiveImg {
  width: 100%;
}

.barName {
  text-align: center;
  font-family: "Cairo", sans-serif;
  font-weight: bold;
  font-size: 2rem;
  color: #2e1300;
  padding: 0px 10px;
}

hr.style-two {
  border: 0;
  height: 1px;
  width: 80%;
  background-image: linear-gradient(
    to right,
    rgba(255, 255, 255, 0),
    rgba(255, 255, 255, 0.75),
    rgba(255, 255, 255, 0)
  );
}

.neighborhood {
  font-family: "Cairo", sans-serif;
  font-size: 1.2rem;
  padding-left: 15px;
  font-weight: bold;
  color: #2e1300;
}

.dayOfTheWeekCard {
  font-family: "Cairo", sans-serif;
  color: #dc8c01;
  text-decoration: none;
  font-size: 1rem;
  padding-left: 15px;
}

.special {
  font-family: "Cairo", sans-serif;
  padding: 10px 15px;
  color: #2e1300;
}

.Modal {
  position: absolute;
  top: 50%;
  left: 50%;
  right: auto;
  bottom: auto;
  margin-right: -50%;
  transform: translate(-50%, -50%);
  background-color: #efefef;
  height: 300px;
  width: 800px;
}

.Modal:focus {
  outline: 0;
}

.Overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.8);
}

.Modal * {
  padding: 0px 10px;
}

.Modal button {
  background-color: #dc8c01;
  border: none;
  color: #2e1300;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border: 2px solid transparent;
}

.Modal button:hover {
  border: 2px solid #2e1300;
}

.Modal h1 {
  margin: 0;
  color: #2e1300;
}

/* media queries */
@media only screen and (max-width: 700px) {
  .Card {
    width: 80%;
  }

  .responsiveImg{
      width: 100%;
  }

  /* modal stuff */
  .Modal {
    height: max-content;
    width: 90%;
    padding: 10px 0;
  }
}

